MODREQMED-23: Date formatting removed and java Date field used instead

--- a/src/main/resources/swagger.api/schemas/sendItemInTransitResponse.yaml
+++ b/src/main/resources/swagger.api/schemas/sendItemInTransitResponse.yaml
@@ -139,6 +139,7 @@ properties:
           lastCheckedInDateTime:
             description: Last checked in date of the item
             type: string
+            format: date-time
           toServicePoint:
             description: Destination service point of the item
             type: string
