--- a/src/main/resources/swagger.api/schemas/sendItemInTransitResponse.yaml
+++ b/src/main/resources/swagger.api/schemas/sendItemInTransitResponse.yaml
@@ -56,6 +56,96 @@ properties:
             description: Suffix of the item's call number
             type: string
         additionalProperties: false
+  staffSlipContext:
+    description: Staff slips data
+    type: object
+    properties:
+      item:
+        description: Staff slips item data
+        type: object
+        properties:
+          title:
+            description: Title of the instance record
+            type: string
+          primaryContributor:
+            description: Primary contributor name from the instance record
+            type: string
+          allContributors:
+            description: List of contributor names from the instance record concatenated with semicolon
+            type: string
+          barcode:
+            description: Barcode of the item
+            type: string
+          status:
+            description: Status of the item
+            type: string
+          enumeration:
+            description: Enumeration of the item
+            type: string
+          volume:
+            description: Volume of the item
+            type: string
+          chronology:
+            description: Chronology of the item
+            type: string
+          yearCaption:
+            description: Year caption of the item
+            type: string
+          materialType:
+            description: Material type of the item
+            type: string
+          loanType:
+            description: Loan type of the item
+            type: string
+          copy:
+            description: Copy number of the item
+            type: string
+          numberOfPieces:
+            description: Number of item pieces
+            type: string
+          displaySummary:
+            description: Display summary of the item
+            type: string
+          descriptionOfPieces:
+            description: Description of item pieces
+            type: string
+          effectiveLocationSpecific:
+            description: Name of the effective location
+            type: string
+          effectiveLocationLibrary:
+            description: Library name of the effective location
+            type: string
+          effectiveLocationCampus:
+            description: Campus name of the effective location
+            type: string
+          effectiveLocationInstitution:
+            description: Institution name of the effective location
+            type: string
+          effectiveLocationDiscoveryDisplayName:
+            description: Discovery display name of the effective location
+            type: string
+          effectiveLocationPrimaryServicePointName:
+            description: Primary service point name of the effective location
+            type: string
+          callNumber:
+            description: Call number of the item
+            type: string
+          callNumberPrefix:
+            description: Prefix of the item's call number
+            type: string
+          callNumberSuffix:
+            description: Suffix of the item's call number
+            type: string
+          lastCheckedInDateTime:
+            description: Last checked in date of the item
+            type: string
+            format: date-time
+          toServicePoint:
+            description: Destination service point of the item
+            type: string
+          fromServicePoint:
+            description: Last checked in service point of the item
+            type: string
   mediatedRequest:
     description: Information about affected mediated request
     type: object
