--- a/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
+++ b/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
@@ -152,6 +152,9 @@ MediatedRequest:
           type: array
           items:
             type: string
+        hrid:
+          description: The human readable ID, also called eye readable ID. A system-assigned sequential ID which maps to the Instance ID
+          type: string
       additionalProperties: false
       required:
         - title
