MODREQMED-36 add fetching inventory from another tenants

--- a/src/main/resources/swagger.api/requests-mediated.yaml
+++ b/src/main/resources/swagger.api/requests-mediated.yaml
@@ -249,6 +249,10 @@ components:
       $ref: 'schemas/inventory/loantype.json'
     request:
       $ref: 'schemas/circulation/request.json'
+    searchItemResponse:
+      $ref: 'schemas/search/searchItemResponse.json'
+    searchInstanceResponse:
+      $ref: 'schemas/search/searchInstancesResponse.json'
     ecsTlr:
       $ref: 'schemas/ecs/ecsTlr.yaml'
     userTenantsResponse:
