--- a/src/main/resources/swagger.api/schemas/ecs/ecsTlr.yaml
+++ b/src/main/resources/swagger.api/schemas/ecs/ecsTlr.yaml
@@ -39,6 +39,9 @@ properties:
   itemId:
     description: "ID of the item being requested"
     "$ref": "../uuid.yaml"
+  holdingsRecordId:
+    description: "ID of the holdings record being requested"
+    $ref: "../uuid.yaml"
   primaryRequestId:
     description: "Primary request ID"
     "$ref": "../uuid.yaml"
