--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>3.2.6</version>
-    <relativePath/>
+    <relativePath />
   </parent>
   <groupId>org.folio</groupId>
   <artifactId>mod-requests-mediated</artifactId>
   <name>mod-requests-mediated</name>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <description>FOLIO mod-requests-mediated module</description>
   <packaging>jar</packaging>
 
@@ -31,7 +30,7 @@
       src/main/java/org/folio/template/FolioSpringTemplateApplication.java,
       src/main/java/org/folio/mr/domain/mapper/MediatedRequestMapper.java
     </sonar.exclusions>
-    <argLine/>
+    <argLine />
 
     <!-- runtime dependencies -->
     <folio-spring-support.version>8.1.2</folio-spring-support.version>
@@ -369,7 +368,7 @@
     <url>https://github.com/folio-org/${project.artifactId}</url>
     <connection>scm:git:git://github.com/folio-org/${project.artifactId}.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/${project.artifactId}.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v1.0.0</tag>
   </scm>
 
 </project>
