--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,9 @@
     </sonar.exclusions>
     <argLine />
 
+    <!--Folio dependencies properties-->
+    <folio-module-descriptor-validator.version>1.0.0</folio-module-descriptor-validator.version>
+
     <!-- runtime dependencies -->
     <folio-spring-support.version>8.2.1</folio-spring-support.version>
     <openapi-generator.version>7.3.0</openapi-generator.version>
@@ -336,8 +339,29 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>org.folio</groupId>
+        <artifactId>folio-module-descriptor-validator</artifactId>
+        <version>${folio-module-descriptor-validator.version}</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>validate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
+
+
+  <pluginRepositories>
+    <pluginRepository>
+      <id>folio-nexus</id>
+      <name>FOLIO Maven repository</name>
+      <url>https://repository.folio.org/repository/maven-folio</url>
+    </pluginRepository>
+  </pluginRepositories>
 
   <repositories>
     <repository>
