--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -39,7 +39,7 @@ spring:
       group-id: ${ENV:folio}-mod-requests-mediated-group
 folio:
   tenant:
-    secure-tenant-id: ${SECURE_TENANT_ID:securetenant}
+    secure-tenant-id: ${SECURE_TENANT_ID}
     validation:
       enabled: true
   environment: ${ENV:folio}
