--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,8 +32,21 @@ spring:
     openfeign:
       okhttp:
         enabled: true
+  kafka:
+    bootstrap-servers: ${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
+    security:
+      protocol: ${KAFKA_SECURITY_PROTOCOL:PLAINTEXT}
+    ssl:
+      key-store-password: ${KAFKA_SSL_KEYSTORE_PASSWORD}
+      key-store-location: ${KAFKA_SSL_KEYSTORE_LOCATION}
+      trust-store-password: ${KAFKA_SSL_TRUSTSTORE_PASSWORD}
+      trust-store-location: ${KAFKA_SSL_TRUSTSTORE_LOCATION}
+    consumer:
+      auto-offset-reset: latest
+      group-id: ${ENV:folio}-mod-requests-mediated-group
 folio:
   tenant:
+    secure-tenant-id: ${SECURE_TENANT_ID}
     validation:
       enabled: true
   environment: ${ENV:folio}
