--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <groupId>org.folio</groupId>
   <artifactId>mod-requests-mediated</artifactId>
   <name>mod-requests-mediated</name>
-  <version>1.2.0</version>
+  <version>1.2.1-SNAPSHOT</version>
   <description>FOLIO mod-requests-mediated module</description>
   <packaging>jar</packaging>
 
