MODREQMED-116 fix response schema

--- a/src/main/resources/swagger.api/schemas/sendItemInTransitResponse.yaml
+++ b/src/main/resources/swagger.api/schemas/sendItemInTransitResponse.yaml
@@ -186,8 +186,8 @@ properties:
       city:
         description: City name
         type: string
-      country:
-        description: Country name
+      countryId:
+        description: Country ID
         type: string
       region:
         description: Region
