MODREQMED-116 Extend sendItemInTransit response with additional requester fields (#85)
* MODREQMED-116 extend requester for sendItemInTransit report

* MODREQMED-116 add permissions

* MODREQMED-116 fix response schema

* MODREQMED-116 fix broken test

* MODREQMED-116 refactoring

* MODREQMED-116 incorporating review comments

* MODREQMED-116 fix code smell

(cherry picked from commit a2e0b2a017b241e49715886ad4cbf3eee12fa415)

--- a/src/main/resources/swagger.api/schemas/sendItemInTransitResponse.yaml
+++ b/src/main/resources/swagger.api/schemas/sendItemInTransitResponse.yaml
@@ -177,3 +177,21 @@ properties:
       middleName:
         description: Middle name of the requester
         type: string
+      addressLine1:
+        description: Address, Line 1
+        type: string
+      addressLine2:
+        description: Address, Line 2
+        type: string
+      city:
+        description: City name
+        type: string
+      countryId:
+        description: Country ID
+        type: string
+      region:
+        description: Region
+        type: string
+      postalCode:
+        description: Postal Code
+        type: string
