MODREQMED-127 Support for Awaiting delivery

--- a/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
+++ b/src/main/resources/swagger.api/schemas/mediatedRequest.yaml
@@ -237,7 +237,7 @@ MediatedRequest:
       type: string
       enum: [ 'New - Awaiting confirmation', 'Open - Not yet filled', 'Open - In transit for approval',
               'Open - Item arrived', 'Open - In transit to be checked out', 'Open - Awaiting pickup',
-              'Closed - Cancelled', 'Closed - Declined', 'Closed - Filled'
+              'Open - Awaiting delivery', 'Closed - Cancelled', 'Closed - Declined', 'Closed - Filled'
       ]
     cancellationReasonId:
       description: ID of the cancellation reason
