--- a/src/main/resources/swagger.api/requests-mediated.yaml
+++ b/src/main/resources/swagger.api/requests-mediated.yaml
@@ -253,6 +253,8 @@ paths:
           $ref: '#/components/responses/notFoundResponse'
         '422':
           $ref: '#/components/responses/badRequestResponse'
+        '500':
+          $ref: '#/components/responses/internalServerErrorResponse'
 components:
   schemas:
     mediatedRequest:
