--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <groupId>org.folio</groupId>
   <artifactId>mod-requests-mediated</artifactId>
   <name>mod-requests-mediated</name>
-  <version>1.0.18-SNAPSHOT</version>
+  <version>1.0.18</version>
   <description>FOLIO mod-requests-mediated module</description>
   <packaging>jar</packaging>
 
@@ -402,7 +402,7 @@
     <url>https://github.com/folio-org/${project.artifactId}</url>
     <connection>scm:git:git://github.com/folio-org/${project.artifactId}.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/${project.artifactId}.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v1.0.18</tag>
   </scm>
 
 </project>
