--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -57,6 +57,11 @@ folio:
     password: ${SYSTEM_USER_PASSWORD:mod-requests-mediated}
     lastname: System
     permissionsFilePath: permissions/mod-requests-mediated.csv
+  batch-requests:
+    thread-pool-size: ${BATCH_REQUEST_THREADS_NUM:4}
+    execution-timeout: ${BATCH_REQUEST_EXECUTION_TIMEOUT:10m}
+    last-executions-status-cache-size: ${BATCH_REQUEST_LAST_EXECUTIONS_CACHE_SIZE:25}
+    print-result: ${BATCH_REQUEST_PRINT_RESULTS:false}
 management:
   endpoints:
     web:
