--- a/src/main/resources/swagger.api/schemas/batch/mediatedBatchRequestDto.yaml
+++ b/src/main/resources/swagger.api/schemas/batch/mediatedBatchRequestDto.yaml
@@ -22,7 +22,7 @@ MediatedBatchRequestDto:
     mediatedWorkflow:
       description: Mediated workflow that mediated batch request follows
       type: string
-      enum: [ 'Batch request' ]
+      enum: [ 'Multi-Item request' ]
     metadata:
       description: Mediated batch request metadata
       type: object
