--- a/src/main/resources/swagger.api/requests-mediated.yaml
+++ b/src/main/resources/swagger.api/requests-mediated.yaml
@@ -236,6 +236,29 @@ paths:
           $ref: '#/components/responses/badRequestResponse'
         '500':
           $ref: '#/components/responses/internalServerErrorResponse'
+  /requests-mediated/loans/check-in-by-barcode:
+    post:
+      description: Check in an item for secure request
+      operationId: checkInByBarcode
+      tags:
+        - mediatedRequestsLoans
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/checkInRequest'
+        required: true
+      responses:
+        '200':
+          description: Item was checked in successfully
+          content:
+            application/json:
+              schema:
+                $ref: 'schemas/circulation/check-in-response.yaml'
+        '400':
+          $ref: '#/components/responses/badRequestResponse'
+        '500':
+          $ref: '#/components/responses/internalServerErrorResponse'
   /requests-mediated/loans/{loanId}/declare-item-lost:
     post:
       description: Declare item lost for a loan
@@ -442,6 +465,10 @@ components:
       $ref: 'schemas/circulation/check-out-dry-run-request.yaml'
     checkOutDryRunResponse:
       $ref: 'schemas/circulation/check-out-dry-run-response.yaml'
+    checkInRequest:
+      $ref: 'schemas/circulation/check-in-request.yaml'
+    checkInResponse:
+      $ref: 'schemas/circulation/check-in-response.yaml'
     loanPolicy:
       $ref: 'schemas/circulation-storage/loan-policy.json'
     searchInstanceResponse:
@@ -460,6 +487,8 @@ components:
       $ref: 'schemas/circulation/declareLostTlrRequest.yaml'
     loan:
       $ref: 'schemas/circulation-storage/loan.yaml'
+    loans:
+      $ref: 'schemas/circulation-storage/loans.yaml'
     claimItemReturnedCirculationRequest:
       $ref: 'schemas/circulation/claimItemReturnedCirculationRequest.yaml'
     claimItemReturnedTlrRequest:
