MODREQMED-190: Add endpoint for retrieval of Batch Requests details by CQL query (#132)

--- a/src/main/resources/swagger.api/requests-mediated.yaml
+++ b/src/main/resources/swagger.api/requests-mediated.yaml
@@ -384,6 +384,23 @@ paths:
           $ref: '#/components/responses/notFoundResponse'
         '500':
           $ref: '#/components/responses/internalServerErrorResponse'
+  /requests-mediated/batch-mediated-requests/details:
+    get:
+      description: Retrieve a collection of mediated batch requests details
+      operationId: getMediatedBatchRequestDetailsCollection
+      tags:
+        - mediatedBatchRequests
+      parameters:
+        - $ref: '#/components/parameters/trait_queryable_query'
+        - $ref: '#/components/parameters/trait_pageable_offset'
+        - $ref: '#/components/parameters/trait_pageable_limit'
+      responses:
+        '200':
+          $ref: '#/components/responses/mediatedBatchRequestDetails'
+        '400':
+          $ref: '#/components/responses/badRequestResponse'
+        '500':
+          $ref: '#/components/responses/internalServerErrorResponse'
 components:
   schemas:
     mediatedRequest:
@@ -532,7 +549,7 @@ components:
             $ref: 'schemas/batch/mediatedBatchRequestDto.yaml#/MediatedBatchRequestDto'
           examples:
             objectExample:
-              externalValue: 'examples/mediatedBatchRequests.json'
+              externalValue: 'examples/mediatedBatchRequest.json'
     mediatedBatchRequests:
       description: A collection of mediated batch request objects
       content:
@@ -541,7 +558,7 @@ components:
             $ref: 'schemas/batch/mediatedBatchRequestsDto.yaml#/MediatedBatchRequestsDto'
           examples:
             objectExample:
-              externalValue: 'examples/mediatedBatchRequest.json'
+              externalValue: 'examples/mediatedBatchRequests.json'
     mediatedBatchRequestDetails:
       description: A collection of mediated batch request details objects
       content:
@@ -550,7 +567,7 @@ components:
             $ref: 'schemas/batch/mediatedBatchRequestDetailsDto.yaml#/MediatedBatchRequestDetailsDto'
           examples:
             objectExample:
-              externalValue: 'examples/mediatedBatchRequest.json'
+              externalValue: 'examples/mediatedBatchRequestDetails.json'
     mediatedRequests:
       description: A collection of mediated request objects
       content:
